# auto-validator

./: .codespellrc  .cruft.json  .gitignore  README.md  README_AWS.md  deploy.sh  noxfile.py  pyproject.toml  secrets.csv
.github/workflows/: ci.yml
app/envs/prod/: Dockerfile  celery-entrypoint.sh  gunicorn.conf.py  prometheus-cleanup.sh
app/src/: celerybeat-schedule  manage.py  mypy.ini  noxfile.py  pytest.ini
app/src/auto_validator/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
app/src/auto_validator/core/: __init__.py  admin.py  api.py  apps.py  authentication.py  models.py  serializers.py  tasks.py  urls.py  views.py
app/src/auto_validator/core/frontend/: package-lock.json  package.json  webpack.config.js
app/src/auto_validator/core/migrations/: 0001_initial.py  0002_block_hotkey_operator_server_subnet_subnetslot_and_more.py  0003_alter_subnet_operators_and_more.py  0003_rename_registered_subnetslot_registered_status_and_more.py  0004_alter_subnet_operators.py  (+13 more)
app/src/auto_validator/discord_bot/: README.md  bot.py  bot_utils.py  config.py  sample_subnet_config.json  subnet_config.py
app/src/auto_validator/sample_configs/: sample_validators_config.json
app/src/auto_validator/sample_subnet_config/: sample_subnet_config.json
app/src/auto_validator/validator_manager/: admin.py  apps.py  models.py  tasks.py
app/src/auto_validator/webhook/: apps.py  urls.py  views.py
app/src/manager/: admin.py  models.py  tasks.py
app/src/manager/migrations/: 0001_initial.py  0002_remove_block_id_subnet_running_mainnet_and_more.py  0003_subnetslot_maximum_registration_price_and_more.py
devops/scripts/: vars.sh
devops/tf/core/: backend.tf  terraform.tfvars
devops/tf/main/files/: cloud-init.yml  docker-compose.yml
devops/vultr_scripts/: vultr-deploy.py
devops/vultr_tf/core/: main.tf  vultr-cloud-init.tftpl
envs/dev/: .env.template
envs/prod/: .env.template  docker-compose.yml
nginx/templates/: default.conf.template
(+36 files in other folders)
